@@ -3,6 +3,8 @@
 	* pygtk-gtkfilefilter.xml Fix links to get_needed() method. Fix custom
 	function signature and description.
 
+	* pygtk-gtkfontbutton.xml Add.
+
 2004-04-07  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkfilechooser.xml Add.
